# pkg/server/server_repo.go
@@ -2,8 +2,10 @@ package server
 
 import (
 	"encoding/json"
-	"strings"
+	"fmt"
+	"time"
 
+	"github.com/nguyentrunghieu15/vcs-common-prj/apu/server"
 	pb "github.com/nguyentrunghieu15/vcs-common-prj/apu/server"
 	"github.com/nguyentrunghieu15/vcs-common-prj/db/model"
 	"gorm.io/gorm"
@@ -24,34 +26,138 @@ func TypeSortToString(v model.TypeSort) string {
 	return ""
 }
 
-func (u *ServerRepositoryDecorator) FindServers(filter model.FilterQueryInterface) ([]model.Server, error) {
-	var server []model.Server
-	var orderQuery string
-	offSet := filter.GetPage() * filter.GetPageSize()
-	if strings.Trim(filter.GetSortBy(), " ") == "" {
-		orderQuery = strings.Trim(filter.GetSortBy(), " ") + " " + TypeSortToString(filter.GetSort())
+func (s *ServerRepositoryDecorator) CountServers(query *string, filter *server.FilterServer) (int64, error) {
+	result := s.db.Model(&model.Server{})
+
+	//Add query
+	if query != nil {
+		result = result.Where("name LIKE ?", "%"+*query+"%").Or("ipv4 LIKE ?", "%"+*query+"%")
 	}
 
-	var result = u.db
+	//Add filter
+	if filter != nil {
+		if createAtFrom := filter.CreatedAtFrom; createAtFrom != nil {
+			convertedTime, err := time.Parse(time.RFC3339, *createAtFrom)
+			if err != nil {
+				return 0, err
+			}
+			result = result.Where("created_at > ?", convertedTime)
+		}
+		if createdAtTo := filter.CreatedAtTo; createdAtTo != nil {
+			convertedTime, err := time.Parse(time.RFC3339, *createdAtTo)
+			if err != nil {
+				return 0, err
+			}
+			result = result.Where("created_at < ?", convertedTime)
+		}
+		if updatedAtFrom := filter.UpdatedAtFrom; updatedAtFrom != nil {
+			convertedTime, err := time.Parse(time.RFC3339, *updatedAtFrom)
+			if err != nil {
+				return 0, err
+			}
+			result = result.Where("updated_at > ?", convertedTime)
+		}
+		if updatedAtTo := filter.UpdatedAtTo; updatedAtTo != nil {
+			convertedTime, err := time.Parse(time.RFC3339, *updatedAtTo)
+			if err != nil {
+				return 0, err
+			}
+			result = result.Where("updated_at < ?", convertedTime)
+		}
 
-	if filter.GetLimit() != -1 {
-		result = result.Limit(int(filter.GetLimit()))
+		if status := filter.Status; status != nil {
+			switch *status {
+			case pb.ServerStatus_ON:
+				result = result.Where("status = ? ", model.On)
+			case pb.ServerStatus_OFF:
+				result = result.Where("status = ? ", model.Off)
+			}
+		}
+
+	}
+	var count int64
+	result = result.Count(&count)
+	if result.Error != nil {
+		return 0, result.Error
+	}
+	return count, nil
+}
+
+func (s *ServerRepositoryDecorator) FindServers(req *server.ListServerRequest) ([]model.Server, error) {
+	var servers []model.Server
+	result := s.db
+
+	//Add query
+	if query := req.Query; query != nil {
+		result = result.Where("name LIKE ?", "%"+*query+"%").Or("ipv4 LIKE ?", "%"+*query+"%")
 	}
 
-	if filter.GetPage() != -1 && filter.GetPageSize() != -1 {
-		result = result.Offset(int(offSet))
+	//Add filter
+	if filter := req.GetFilter(); filter != nil {
+		if createAtFrom := filter.CreatedAtFrom; createAtFrom != nil {
+			convertedTime, err := time.Parse(time.RFC3339, *createAtFrom)
+			if err != nil {
+				return nil, err
+			}
+			result = result.Where("created_at > ?", convertedTime)
+		}
+		if createdAtTo := filter.CreatedAtTo; createdAtTo != nil {
+			convertedTime, err := time.Parse(time.RFC3339, *createdAtTo)
+			if err != nil {
+				return nil, err
+			}
+			result = result.Where("created_at < ?", convertedTime)
+		}
+		if updatedAtFrom := filter.UpdatedAtFrom; updatedAtFrom != nil {
+			convertedTime, err := time.Parse(time.RFC3339, *updatedAtFrom)
+			if err != nil {
+				return nil, err
+			}
+			result = result.Where("updated_at > ?", convertedTime)
+		}
+		if updatedAtTo := filter.UpdatedAtTo; updatedAtTo != nil {
+			convertedTime, err := time.Parse(time.RFC3339, *updatedAtTo)
+			if err != nil {
+				return nil, err
+			}
+			result = result.Where("updated_at < ?", convertedTime)
+		}
+
+		if status := filter.Status; status != nil {
+			switch *status {
+			case pb.ServerStatus_ON:
+				result = result.Where("status = ? ", model.On)
+			case pb.ServerStatus_OFF:
+				result = result.Where("status = ? ", model.Off)
+			}
+		}
+
 	}
 
-	if filter.GetSortBy() != "" {
-		result = result.Order(orderQuery)
+	// Add pagination
+	if req.GetPagination() != nil {
+		if limit := req.GetPagination().Limit; limit != nil && *limit > 1 {
+			result = result.Limit(int(*limit))
+		}
+		page := req.GetPagination().Page
+		pageSize := req.GetPagination().PageSize
+		if page != nil && pageSize != nil && *page > 0 && *pageSize > 0 {
+			result.Offset(int((*page - 1) * (*pageSize)))
+		}
+		if orderBy := req.GetPagination().SortBy; orderBy != nil {
+			if req.GetPagination().Sort != nil && req.GetPagination().Sort == pb.TypeSort_DESC.Enum() {
+				result = result.Order(fmt.Sprintf("%v %v", orderBy, "DESC"))
+			} else {
+				result = result.Order(orderBy)
+			}
+		}
 	}
 
-	result = result.Find(&server)
-
+	result = result.Find(&servers)
 	if result.Error != nil {
 		return nil, result.Error
 	}
-	return server, nil
+	return servers, nil
 }
 
 func NewServerRepository(db *gorm.DB) *ServerRepositoryDecorator {
@@ -116,4 +222,70 @@ func ParseMapUpdateServerRequest(req *pb.UpdateServerRequest) (map[string]interf
 		}
 	}
 	return result, nil
+}
+
+func (s *ServerRepositoryDecorator) CheckServerExists(data map[string]interface{}) bool {
+	var count int64
+	result := s.db.Model(&model.Server{})
+	if id, ok := data["id"]; ok {
+		result = result.Where("id = ?", id)
+		if name, ok := data["name"]; ok {
+			result = result.Or("name = ?", name)
+		}
+	} else {
+		if name, ok := data["name"]; ok {
+			result = result.Where("name = ?", name)
+		}
+	}
+
+	result = result.Count(&count)
+	fmt.Println(count)
+	if result.Error != nil || count > 0 {
+		return true
+	}
+	return false
+}
+
+func ConvertServerModelMapToServerProto(server map[string]interface{}) *pb.Server {
+	// Convert the map to JSON
+	jsonData, _ := json.Marshal(server)
+	var structData model.Server
+	json.Unmarshal(jsonData, &structData)
+	return ConvertServerModelToServerProto(structData)
+}
+
+func ConvertListServerModelMapToListServerProto(s []map[string]interface{}) []*server.Server {
+	var result []*server.Server = make([]*server.Server, 0)
+	for _, v := range s {
+		result = append(result, ConvertServerModelMapToServerProto(v))
+	}
+	return result
+}
+
+func (s *ServerRepositoryDecorator) CreateBacth(userId uint64, data []map[string]interface{}) (*pb.ImportServerResponse, error) {
+	importServer := make([]map[string]interface{}, 0)
+	resImportServer := make([]map[string]interface{}, 0)
+	abortServer := make([]map[string]interface{}, 0)
+	for _, v := range data {
+		if s.CheckServerExists(v) {
+			abortServer = append(abortServer, v)
+		} else {
+			v["created_at"] = time.Now()
+			v["created_by"] = userId
+			importServer = append(importServer, v)
+			resImportServer = append(resImportServer, v)
+		}
+	}
+	if len(importServer) != 0 {
+		result := s.db.Model(&model.Server{}).Create(&importServer)
+		if result.Error != nil {
+			return nil, result.Error
+		}
+	}
+	return &pb.ImportServerResponse{
+		NumServerImported: int64(len(resImportServer)),
+		ServerImported:    ConvertListServerModelMapToListServerProto(resImportServer),
+		NumServerFail:     int64(len(abortServer)),
+		ServerFail:        ConvertListServerModelMapToListServerProto(abortServer),
+	}, nil
 }
